--- a/bin/nextsass.css
+++ b/bin/nextsass.css
@@ -1,2 +1,2 @@
 
-/*# sourceMappingURL=nextsass.css.map */
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJuZXh0c2Fzcy5jc3MifQ== */
