--- a/src/nextsass.scss
+++ b/src/nextsass.scss
@@ -7,15 +7,20 @@
 /// MPL-2.0 License
 ////
 
-@import 'compass';
-
 @import 'nextsass/variables';
 
 @import 'nextsass/core/colors';
 @import 'nextsass/core/grids';
 
+@import 'nextsass/functions/maps';
 @import 'nextsass/functions/strings';
 @import 'nextsass/functions/colors';
 @import 'nextsass/functions/units';
 @import 'nextsass/functions/paths';
 @import 'nextsass/functions/utilities';
+
+@import 'nextsass/mixins/utilities';
+@import 'nextsass/mixins/responsive';
+@import 'nextsass/mixins/alignment';
+@import 'nextsass/mixins/styling';
+@import 'nextsass/mixins/bem';
