--- a/src/nextsass/core/_colors.scss
+++ b/src/nextsass/core/_colors.scss
@@ -1,5 +1,6 @@
 ////
 /// core / colors
+/// @access public
 /// @group core
 /// @author Ilton Alberto Junior
 ////
@@ -19,4 +20,3 @@ $nextsass-color: (
     'info': #02BFE7
   )
 ) !default;
-
