--- a/src/nextsass/functions/_strings.scss
+++ b/src/nextsass/functions/_strings.scss
@@ -1,5 +1,6 @@
 ////
 /// functions / strings
+/// @access public
 /// @group strings
 /// @author Ilton Alberto Junior
 ////
@@ -37,3 +38,77 @@
   }
   @return $value;
 }
+
+/// Replace `$search` with `$replace` in `$string`
+/// @author Hugo Giraudel
+/// @param {string} $string - Initial string
+/// @param {string} $search - Substring to replace
+/// @param {string} $replace ('') - New value
+/// @return {string} - Updated string
+@function str-replace($string, $search, $replace: '') {
+  $index: str-index($string, $search);
+
+  @if $index {
+    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+  }
+
+  @return $string;
+}
+
+/// Split a string into a list of strings
+/// @param {string} $string - The string to be split
+/// @param {string} $delimiter - The boundary string
+/// @return {list} The result list
+/// @author danielpchen
+/// @link https://gist.github.com/danielpchen/1bef5000cfda98dbf6be
+@function implode($pieces, $glue: "") {
+  $result: null;
+  @for $i from 1 through length($pieces) {
+    $piece: nth($pieces, $i);
+    @if type-of($piece) == list {
+      $result: unquote("#{$result}#{$glue}#{implode($piece, $glue)}");
+    } @else {
+      $result: unquote("#{$result}#{$glue}#{$piece}");
+    }
+  }
+  @if $result != null {
+    $result: str-slice($result, str-length($glue) + 1, -1);
+  }
+  @return $result;
+}
+
+/// Split a string into a list of strings
+/// @param {string} $string - The string to be split
+/// @param {string} $delimiter - The boundary string
+/// @return {list} The result list
+/// @author danielpchen
+/// @link https://gist.github.com/danielpchen/1bef5000cfda98dbf6be
+@function explode($string, $delimiter) {
+  $result: ();
+  @if $delimiter == "" {
+    @for $i from 1 through str-length($string) {
+      $result: append($result, str-slice($string, $i, $i));
+    }
+    @return $result;
+  }
+  $exploding: true;
+  @while $exploding {
+    $d-index: str-index($string, $delimiter);
+    @if $d-index {
+      @if $d-index > 1 {
+        $result: append($result, str-slice($string, 1, $d-index - 1));
+        $string: str-slice($string, $d-index + str-length($delimiter));
+      } @else if $d-index == 1 {
+        $string: str-slice($string, 1, $d-index + str-length($delimiter));
+      } @else {
+        $result: append($result, $string);
+        $exploding: false;
+      }
+    } @else {
+      $result: append($result, $string);
+      $exploding: false;
+    }
+  }
+  @return $result;
+}
+
