--- a/src/nextsass/_variables.scss
+++ b/src/nextsass/_variables.scss
@@ -5,19 +5,19 @@
 /// @author Ilton Alberto Junior
 ////
 
-// Initial configuration
+/// Initial configuration
 $grid-active: true;
 
-// Assets path
+/// Assets path
 $asset-base-path: '../assets' !default;
 
-// Default font size inside <body>
+/// Default font size inside <body>
 $rem-base: 14px;
 
-// Main project font
+/// Main project font
 $main-font: 'Open Sans', sans-serif;
 
-// Font-face list
+/// Font-face list
 $font-faces: (
   'Intro': (
     'Intro-Black' 900 normal,
